@@ -16,6 +16,7 @@
       <xs:element minOccurs="0" maxOccurs="1" name="Id" type="xs:string" />
       <xs:element minOccurs="0" maxOccurs="1" name="Description" type="xs:string" />
       <xs:element minOccurs="0" maxOccurs="1" name="Pipeline" type="xs:string" />
+      <xs:element minOccurs="0" maxOccurs="1" name="EditMode" type="xs:string" />
       <xs:element minOccurs="1" maxOccurs="1" name="Global" type="xs:boolean" />
       <xs:element minOccurs="0" maxOccurs="1" default="9.0.0.0" name="RequiredVersion" type="xs:string" />
     </xs:sequence>
